--- a/QlikGym/src/main/resources/application.properties
+++ b/QlikGym/src/main/resources/application.properties
@@ -8,4 +8,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
+#image size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 server.port=8084
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+
+
